--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
   </head>
   <body>
     <div id="board">
-      <div id="score" class="info">pt:0</div>
-      <div id="time" class="info">tm:0</div>
-      <div id="hp" class="info">hp:0</div>
-      <div id="enemy" class="info">em:0</div>
+      <div class="info">
+        <span>sc: </span>
+        <span id="score">0</span>
+      </div>
+      <div class="info">
+        <span>tm: </span>
+        <span id="time">0</span>
+      </div>
+      <div class="info">
+        <span>hp: </span>
+        <span id="hp">5</span>
+      </div>
+      <div class="info">
+        <span>en: </span>
+        <span id="enemy">0</span>
+      </div>
       <button id="btnPlay" class="button">&#11208;</button>
     </div>
     <canvas tabindex="1">your browser does not support canvas</canvas>
